feat: redesign Glacier Commerce with Sakai-NG design language
- Layout shell: AppLayout, AppTopbar, AppSidebar, AppMenu, AppMenuitem, AppFooter
- Theme configurator: primary/surface colors, preset switching, menu mode toggle
- Floating configurator for standalone auth pages
- Sakai-NG layout CSS for sidebar/topbar/menu/animation
- Redesigned all 15 pages with Sakai-NG card/typography/button patterns
- Auth pages (login/register) with centered card layout and floating configurator
- Admin/seller dashboards with StatsWidget metric card pattern
- Product pages with styled cards, tables, and role badges
- Added missing edit-product route